--- a/.gitignore
+++ b/.gitignore
@@ -331,3 +331,4 @@ vs-chromium-project.txt
 # Ignore the default results output directory for tools/run-swarmed.py
 /results
 /third_party/node/linux/node-linux-x64
+/third_party/llvm-build/
