--- a/debian/control
+++ b/debian/control
@@ -89,6 +89,7 @@ Build-Depends:
  libgcrypt20-dev,
  fonts-ipafont-gothic,
  fonts-ipafont-mincho,
+ libcurl4-gnutls-dev,
 
 Package: chromium
 Architecture: i386 amd64 arm64 armhf
