--- a/debian/control
+++ b/debian/control
@@ -30,6 +30,7 @@ Build-Depends:
  wdiff,
  gperf,
  bison,
+ sse3-support [i386 amd64],
  nodejs,
  valgrind,
  xz-utils,
@@ -173,7 +174,6 @@ Depends:
  ${shlibs:Depends},
  x11-utils,
  xdg-utils,
- sse3-support [i386 amd64]
 Recommends:
  upower,
  libu2f-udev,
